# pychat

./: pyproject.toml
client/: client.py
server/: server.py
