[tool.poetry]
name = "pychat"
version = "0.1.0"
description = "An internet chat client + server"
authors = ["ib4519894"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.8"
aiohttp = "^3.7.4"
aioconsole = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
